# Latent-Diffusion-Geometry

./: .gitignore  CLAUDE.md  README.md  main.py  pyproject.toml
experiments/: 01-reach-estimation.ipynb  02-lfs-estimation.ipynb
